logs/turtlesim/build.make.176.log
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] Built target _turtlesim_generate_messages_check_deps_Kill
[  0%] Built target _turtlesim_generate_messages_check_deps_Spawn
[  0%] Built target _turtlesim_generate_messages_check_deps_SetPen
[  0%] Built target _turtlesim_generate_messages_check_deps_TeleportAbsolute
[  0%] Built target _turtlesim_generate_messages_check_deps_Pose
[  0%] Built target _turtlesim_generate_messages_check_deps_TeleportRelative
[  0%] Built target std_srvs_generate_messages_cpp
[  0%] Built target std_srvs_generate_messages_lisp
[  0%] Built target std_msgs_generate_messages_py
[  0%] Built target std_msgs_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_py
[  0%] Built target geometry_msgs_generate_messages_lisp
[  0%] Built target _turtlesim_generate_messages_check_deps_Color
[  0%] Built target std_srvs_generate_messages_py
[  0%] Built target std_msgs_generate_messages_nodejs
[  0%] Built target std_srvs_generate_messages_eus
[  0%] Built target std_msgs_generate_messages_eus
[  0%] Built target std_srvs_generate_messages_nodejs
[  0%] Built target geometry_msgs_generate_messages_nodejs
[  0%] Built target geometry_msgs_generate_messages_eus
[ 14%] Built target turtlesim_generate_messages_cpp
[ 44%] Built target turtlesim_generate_messages_lisp
[ 46%] Built target turtlesim_generate_messages_py
[ 60%] Built target turtlesim_generate_messages_nodejs
[ 76%] Built target turtlesim_generate_messages_eus
[ 76%] Built target turtlesim_gencpp
[35m[1mScanning dependencies of target turtlesim_node[0m
[ 76%] Built target turtlesim_generate_messages
[ 80%] Built target turtle_teleop_key
[ 84%] Built target mimic
[ 88%] Built target draw_square
[ 90%] [32mBuilding CXX object CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o[0m
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In member function ‘void turtlesim::Turtle::paint(QPainter&)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:239:3: error: ‘p’ was not declared in this scope
   p.rx() -= 0.5 * turtle_rotated_image_.width();
   ^
CMakeFiles/turtlesim_node.dir/build.make:90: recipe for target 'CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o' failed
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
CMakeFiles/Makefile2:104: recipe for target 'CMakeFiles/turtlesim_node.dir/all' failed
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
Makefile:140: recipe for target 'all' failed
make: *** [all] Error 2
